add create task function

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,5 +1,9 @@
 <h1>Show all tasks</h1>
 
 <% @tasks.each do |task| %>
-  <p><%= link_to task.title, "index/#{task.id}" %></p>
+  <p><%= link_to task.title, "tasks/#{task.id}" %></p>
 <% end %>
+
+<hr>
+
+<%= link_to "➕ Create New Task", "/tasks/new" %>
