--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,10 +1,14 @@
-
 <h1><%= @task.title %></h1>
 <p><%= @task.details %></p>
 <p>Completed: <%= @task.completed? ? "Finished ✅" : "Open ❌" %></p>
 
 
-<%= link_to "Back to Task Overview", "/index" %>
+<%= link_to "Edit Task", "#{@task.id}/edit" %>
+
+
+<hr>
+
+<%= link_to "Back to Task Overview", "/tasks" %>
 
 
 
