--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,16 @@
  *= require_tree .
  *= require_self
  */
+@import "font-awesome";
+@import "font-awesome-pro/brands";
+@import "font-awesome-pro/solid";
+@import "font-awesome-pro/regular";
+@import "font-awesome-pro/light";
+@import "font-awesome-pro/thin";
+@import "font-awesome-pro/duotone";
+@import "font-awesome-pro/sharp-solid";
+
+
+ a {
+  text-decoration: none;
+}
