--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,12 +1,18 @@
-<h1>Show all tasks</h1>
+<div class="d-flex justify-content-between align-items-center mb-4">
+  <h1>Show all tasks</h1>
+  <%= link_to "Create New Task", "/tasks/new", :class => "btn btn-primary text-white" %>
+</div>
 
-<% @tasks.each do |task| %>
-  <p><%= link_to task.title, "tasks/#{task.id}" %> <%= link_to "delete task", 
-  "tasks/#{task.id}",
-  data: {turbo_method: :delete, turbo_confirm: "Are your sure?"}
-%></p>
-<% end %>
+<ul class="list-group">
 
+  <% @tasks.each do |task| %>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        <%= link_to task.title, "tasks/#{task.id}" %> 
+        <%= link_to "", "tasks/#{task.id}", class: "fa-solid fa-trash" , data: {turbo_method: :delete, turbo_confirm: "Are your sure?"} %>
+      </li>
+  <% end %>
+
+</ul>
 <hr>
 
-<%= link_to "➕ Create New Task", "/tasks/new" %>
+
