--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,9 +1,10 @@
-<h1><%= @task.title %></h1>
+<div class="d-flex justify-content-between align-items-center mb-4">
+  <h1><%= @task.title %></h1>
+  <%= link_to "Edit Task", "#{@task.id}/edit", :class => "btn btn-primary text-white" %>
+</div>
+
 <p><%= @task.details %></p>
 <p>Completed: <%= @task.completed? ? "Finished ✅" : "Open ❌" %></p>
-
-
-<%= link_to "Edit Task", "#{@task.id}/edit" %>
 
 
 <hr>
